fixing right-aligned

--- a/client/stylesheets/stylus/partials/list.import.styl
+++ b/client/stylesheets/stylus/partials/list.import.styl
@@ -52,13 +52,9 @@
 						}
 					}
 				}
-			}
 
-			.quick-action {
-				button {
-					border: none;
-					color: $gray-bar;
-					background-color: transparent;
+				.table-layout {
+					table-layout: fixed;
 				}
 			}
 
@@ -112,13 +108,6 @@
 				}
 			}
 
-			.right-aligned {
-				display: table-cell;
-				text-align: right;
-				vertical-align: middle;
-				font-size: 22px;
-				color: $gray-bar;
-			}
 
 			.checkbox {
 				display: table-cell;
@@ -155,18 +144,32 @@
 				}
 			}
 
-			.message-preview {
-				table-layout: fixed;
-				.username {
-					width: 75%;
+			.right-aligned {
+				display: table-cell;
+				text-align: center;
+				vertical-align: middle;
+
+				width: 30px;
+				font-size: 22px;
+				color: $gray-bar;
+
+				&.quick-action {
+					button {
+						padding: 0;
+						margin: 0;
+						border: none;
+						color: $gray-bar;
+						background-color: transparent;
+					}
 				}
 			}
 
 			.title-wrapper,
 			.username {
-				position: relative;
 				username(14px);
-				width: calc(80% - 45px);
+				position: relative;
+				width: 100%;
+				// ellipsis();
 
 				small {
 					color: $gray-row-pin;
@@ -177,7 +180,7 @@
 				}
 
 				.message {
-					ellipsis();
+
 				}
 
 				.count {
@@ -240,7 +243,6 @@
 			}
 		}
 
-		
 	}
 
 	// BOTTOM
