--- a/client/stylesheets/stylus/system/mixins.import.styl
+++ b/client/stylesheets/stylus/system/mixins.import.styl
@@ -1,5 +1,6 @@
 a-wrapper() {
 	& > a {
+		position: relative;
 		display: table;
 		width: inherit;
 		undecorate();
